test/ui/name-resolution/decayed-namespace.lushui
data Alpha of
    alpha: Alpha

use Alpha as A

x: Alpha = A.alpha

Decayed-Alpha = Alpha

y: Alpha = Decayed-Alpha.alpha
